revise chat scroll position when get history data

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     preTop = $("#content")[0].scrollTop
     if (preTop == 0) {
       console.log('add')
-      old_data()
+      oldMsg()
     }
   })
 </script>
