--- a/templates/index.html
+++ b/templates/index.html
@@ -8,33 +8,45 @@
   <script src="../static/js/a1.js" type="text/javascript"></script>
   <script src="https://kit.fontawesome.com/c416c8b21d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet " type="text/css " href="../static/css/a1.css ">
+  <link rel="stylesheet " type="text/css " href="../static/css/basic.css ">
 </head>
 
 <body style="background-color: #bbb;">
-  <div id="chat">
-    <div id="content">
+  <div id="shell">
+    <div id="friends">
+      <div id="friends_head">
+        <div>
+          朋友列表
+        </div>
+        <div class="btn">
+          <i class="fas fa-plus"></i>
+        </div>
+      </div>
+      <div id="friends_body"></div>
+
     </div>
-    <div id="tools">
+    <div id="chat">
+      <div id="chatHead"></div>
+      <div id="content">
+      </div>
+      <div id="tools">
+        <div>
+          <i class="fas fa-paperclip" style="font-size: 25px;"></i>
+        </div>
+        <div id="photo">
+          <i class="fas fa-image" style="font-size: 25px;"></i>
+        </div>
+        <div id="sticker">
+          <i class="far fa-smile" style="font-size: 25px;"></i>
+        </div>
+        <div id="stickers"></div>
+      </div>
+      <div id="inputText" contenteditable="true"></div>
       <div>
-        <i class="fas fa-paperclip" style="font-size: 25px;"></i>
+        <button id="send">發送</button>
       </div>
-      <div id="photo">
-        <i class="fas fa-image" style="font-size: 25px;"></i>
-      </div>
-      <div id="sticker">
-        <i class="far fa-smile" style="font-size: 25px;"></i>
-      </div>
-      <div id="stickers"></div>
+
     </div>
-    <div id="inputText" contenteditable="true"></div>
-
-    <input type="button" value="sticker" onclick="sticker()" />
-    <input type="button" value="send_left" onclick="send()" />
-    <input type="button" value="send_right" onclick="send_r()" />
-    <input type="button" value="history" onclick="oldMsg()" />
-    <input type="button" value='start' id='test1' />
-    <input type="button" value='stop' id='test2' />
-
   </div>
 
 </body>
@@ -52,7 +64,6 @@
   document.querySelector('#content').addEventListener("scroll", function(event) {
     preTop = $("#content")[0].scrollTop
     if (preTop == 0) {
-      console.log('add')
       oldMsg()
     }
   })
