--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet " type="text/css " href="../static/css/basic.css ">
 </head>
 
+<div id="notifyDiv"></div>
+<div id="centerDiv"></div>
+
 <body style="background-color: #bbb;">
   <div id="shell">
     <div id="friends">
@@ -18,8 +21,8 @@
         <div>
           朋友列表
         </div>
-        <div class="btn">
-          <i class="fas fa-plus"></i>
+        <div id='addFriend' class="btn">
+          <i class="fas fa-user-plus"></i>
         </div>
       </div>
       <div id="friends_body"></div>
