--- a/static/css/a1.css
+++ b/static/css/a1.css
@@ -260,3 +260,35 @@ img {
   box-shadow: inset 0 0 20px #FFFFFF;
   cursor: pointer;
 }
+
+#addFriendForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  background-color: #4EFEB3;
+  border-radius: 10px;
+}
+
+#addFriendForm_head {
+  display: flex;
+}
+
+#addFriendForm_title {
+  position: relative;
+  left: 5px;
+}
+
+#addFriendForm_close {
+  position: relative;
+  left: 50px;
+}
+
+#addFriendForm>div {
+  margin: 5px;
+}
+
+#centerDiv {
+  position: absolute;
+  top: 300px;
+}
