--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -15,3 +15,39 @@ button:hover {
 .btn:hover {
   cursor: pointer;
 }
+
+#notifyDiv {
+  position: absolute;
+}
+
+#notify_cell {
+  top: 50px;
+  background-color: #66bb6a;
+  color: #FFF;
+  width: 200px;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 5px;
+  font-weight: bold;
+  text-align: center;
+  animation-name: ooxx;
+  animation-duration: 1s;
+}
+
+#notifyDiv>div>div {
+  margin: 5px;
+  font-size: 20px;
+}
+
+@keyframes ooxx {
+  from {
+    width: 0px;
+    margin-left: 100px;
+    left: 700px;
+  }
+  to {
+    width: 200px;
+    margin-left: 5px;
+    left: 40px;
+  }
+}
