--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <title>Chat</title>
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script src="../static/js/a1.js" type="text/javascript"></script>
+  <script src="../static/js/index.js" type="text/javascript"></script>
   <script src="https://kit.fontawesome.com/c416c8b21d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet " type="text/css " href="../static/css/a1.css ">
+  <link rel="stylesheet " type="text/css " href="../static/css/index.css ">
   <link rel="stylesheet " type="text/css " href="../static/css/basic.css ">
 </head>
 
@@ -15,6 +15,14 @@
 <div id="centerDiv"></div>
 
 <body style="background-color: #bbb;">
+  <div id="top">
+    <div id="topRight"></div>
+    <div id="topLeft">
+      <div>NAME</div>
+      <div>{{usrID}}</div>
+      <div id="logout"><a href="/logout">logout</a></div>
+    </div>
+  </div>
   <div id="shell">
     <div id="friends">
       <div id="friends_head">
