--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,15 @@
   <meta charset="utf-8">
   <title>Chat</title>
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script src="../static/js/index.js" type="text/javascript"></script>
   <script src="https://kit.fontawesome.com/c416c8b21d.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+		integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"
+		integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ=="
+		crossorigin="anonymous"></script>
+  
+    <script src="../static/js/index.js" type="text/javascript"></script>
   <link rel="stylesheet " type="text/css " href="../static/css/index.css ">
   <link rel="stylesheet " type="text/css " href="../static/css/basic.css ">
 </head>
@@ -27,7 +34,7 @@
     <div id="friends">
       <div id="friends_head">
         <div>
-          朋友列表
+          Friends
         </div>
         <div id='addFriend' class="btn">
           <i class="fas fa-user-plus"></i>
@@ -54,7 +61,7 @@
       </div>
       <div id="inputText" contenteditable="true"></div>
       <div>
-        <button id="send">發送</button>
+        <button id="send">Send</button>
       </div>
 
     </div>
@@ -63,6 +70,7 @@
 </body>
 
 <script>
+  // limit inputut text length < 100
   document.querySelector('#inputText').addEventListener("keypress", function(event) {
     //console.log(this.innerText.length)
     if (this.innerText.length >= 100) {
@@ -72,6 +80,7 @@
     }
   })
 
+  // auto update old message when scroll to top
   document.querySelector('#content').addEventListener("scroll", function(event) {
     preTop = $("#content")[0].scrollTop
     if (preTop == 0) {
