--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Login</title>
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <script src="https://kit.fontawesome.com/c416c8b21d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet " type="text/css " href="../static/css/login.css ">
   <script src="../static/js/login.js" type="text/javascript"></script>
 </head>
@@ -33,6 +34,30 @@
       <button id="signUp">建立帳號</button>
     </div>
   </div>
+
+  <div id="signup_form" style="display: none;">
+    <div id="signup_head">
+      <div></div>
+      <div>Sign Up</div>
+      <div id="signup_close"><i class="fas fa-times"></i></div>
+    </div>
+    <div id="signup_body">
+      <div>
+        <input type="text" id="signup_ID" placeholder="ID">
+      </div>
+      <div>
+        <input type="password" id="signup_password" placeholder="password">
+      </div>
+      <div>
+        <input type="text" id="signup_name" placeholder="nickname">
+      </div>
+      <div>
+        <button id="sign_up">sign up</button>
+      </div>
+      <div id="signup_message" style="font-size: small; color:red;">&nbsp</div>
+    </div>
+  </div>
+
 </body>
 
 </html>
