--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,10 @@
   <title>Chat</title>
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script src="https://kit.fontawesome.com/c416c8b21d.js" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-		integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-		crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"
-		integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ=="
-		crossorigin="anonymous"></script>
-  
-    <script src="../static/js/index.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
+
+  <script src="../static/js/index.js" type="text/javascript"></script>
   <link rel="stylesheet " type="text/css " href="../static/css/index.css ">
   <link rel="stylesheet " type="text/css " href="../static/css/basic.css ">
 </head>
@@ -22,8 +18,8 @@
 <div id="centerDiv"></div>
 
 
-<body style="background-color: #bbb;">
-  
+<body>
+
   {% include 'invitation.html' %}
 
   <div id="top">
@@ -34,42 +30,48 @@
       <div id="logout"><a href="/logout">logout</a></div>
     </div>
   </div>
+
   <div id="shell">
     <div id="friends">
       <div id="friends_head">
         <div>
           Friends
         </div>
-        <div id='addFriend' class="btn">
+        <div id='addFriend' class="btn icon">
           <i class="fas fa-user-plus"></i>
         </div>
       </div>
       <div id="friends_body"></div>
-
     </div>
+
     <div id="chat">
-      <div id="chatHead"></div>
+      <div id="chatHead">
+        <div id="chat_headshot"><img src='../static/img/tiger/tiger01.png'></div>
+        <div class="friend_name">Welcome!</div>
+      </div>
+
       <div id="content">
       </div>
       <div id="tools">
-        <div>
+        <div class="icon">
           <i class="fas fa-paperclip" style="font-size: 25px;"></i>
         </div>
-        <div id="photo">
+        <div id="photo" class="icon">
           <i class="fas fa-image" style="font-size: 25px;"></i>
         </div>
-        <div id="sticker">
+        <div id="sticker" class="icon">
           <i class="far fa-smile" style="font-size: 25px;"></i>
         </div>
-        <div id="stickers"></div>
+        <div id="stickerList" style="display: none;"></div>
       </div>
-      <div id="inputText" contenteditable="true"></div>
-      <div>
-        <button id="send" disabled>Send</button>
+      <div id="inputTable">
+        <div id="inputText" contenteditable="true"></div>
+        <div><button id="send" disabled>Send</button></div>
       </div>
 
     </div>
   </div>
+  <div id="bottom">copyright Chun-Ting Chen</div>
 
 </body>
 
