--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,22 +6,26 @@ body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  font-family: 'Roboto','Microsoft JhengHei' !important;
 }
 
+/* notify */
 #notifyDiv {
-  position: absolute;
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 #notify_cell {
-  top: 50px;
-  background-color: #66bb6a;
-  color: #FFF;
   width: 200px;
   border-radius: 10px;
   margin: 5px;
   padding: 5px;
-  font-weight: bold;
   text-align: center;
+  background-color: #66bb6a;
+  color: #FFF;
+  font-weight: bold;
   animation-name: ooxx;
   animation-duration: 1s;
 }
@@ -44,10 +48,12 @@ body {
   }
 }
 
+
+/* top bottom */
 #top {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #000;
+  box-shadow:0 3px 3px -3px rgb(80, 80, 80, 0.4);
 }
 
 #topLeft {
@@ -60,95 +66,136 @@ body {
 }
 
 #bottom {
+  padding: 5px;
   text-align: center;
-  padding: 5px;
-  border-top: 1px solid #000;
+  background-color: #eee;
+  font-weight:lighter;
+  font-size: 10px;
 }
 
-#content {
-  flex: 1;
-  /*height: 250px;*/
-  padding: 5px;
-  width: 95%;
-  border: 2px solid #000;
-  overflow: auto;
-  margin: 5px;
-  font-size: 16px;
-  font-weight: bold;
+#mid {
+  flex: 1; /* mid height */
+  display: flex;
+  min-height: 0;
 }
 
-#inputTable {
+/* friend list */
+#friends {
+  width: 360px;
+  /*flex-basis: 360px;*/
+  flex-shrink: 0;
+  box-shadow:3px 0px 3px -3px rgb(80, 80, 80, 0.4);
+}
+
+#friends_head {
   display: flex;
   align-items: center;
-  margin: 5px;
+  justify-content: space-between;
+  padding:10px;
+  font-size: 30px;
+  box-shadow:0 3px 3px -3px rgb(80, 80, 80, 0.4);
 }
 
-#inputText {
+#friends_body {
+  height: 100%;
+}
+
+.friend_cell {
+  display: flex;
+  align-items: center;
+  height: 72px;
   padding: 5px;
-  width: 95%;
-  min-height: 32px;
-  border: 2px solid #000;
-  font-size: 16px;
-  font-weight: bold;
-  overflow: auto;
+}
+.friend_cell>div{
+  margin:5px;
 }
 
-#send {
-  margin: 5px;
+.friend_name {
+  text-align: center;
+  font-size: 20px;
 }
 
-.remote_text {
-  word-break: break-all;
-  max-width: 300px;
-  width: auto;
-  display: inline-block !important;
-  display: inline;
-  height: auto;
-  /*max-height: 100px;*/
-  padding: 5px;
-  border-radius: 10px;
-  position: relative;
-  margin-left: 20px;
-  margin-right: 80px;
-  color: #eee;
-  background-color: #4179f1;
+.friend_message {
+  font-weight: normal;
 }
 
-.remote_text::before {
-  content: "";
-  position: absolute;
-  top: 7px;
-  border-top: 2px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-right: 10px solid #4179f1;
-  left: -10px;
+.friend_head {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background-color: #ccc;
+  font-size: 40px;
 }
 
-.local_text {
-  word-break: break-all;
-  max-width: 300px;
-  width: auto;
-  display: inline-block !important;
-  display: inline;
-  height: auto;
-  /*max-height: 100px;*/
-  padding: 5px;
-  border-radius: 10px;
-  position: relative;
-  order: -1;
-  margin-left: 80px;
-  margin-right: 20px;
+#friends_body>div.active,
+#friends_body>div:hover {
+  box-shadow: inset 0 0 10px #333;
+  cursor: pointer;
+}
+
+
+/* chat */
+#chat {
+  flex: 1; /* width */
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  overflow-wrap: break-word;
+}
+
+#chatHead {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  box-shadow: 0 3px 3px -3px rgb(80, 80, 80, 0.4);
+}
+
+#chat_headshot {
+  display:flex;
+  justify-content: center;
+  align-items:center;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-right: 10px;
+  font-size: 24px;
   background-color: #aaa;
 }
 
-.local_text::after {
+
+/* chat room */
+#content {
+  flex: 1; /*height
+  height:300px;*/
+  width: 98%;
+  min-height: 0;
+  padding: 5px;
+  box-shadow:0 3px 3px -3px rgb(80, 80, 80, 0.4);
+  font-size: 1em;
+  font-weight: bold;
+  overflow: auto;
+}
+
+.message_cell{
+  word-break: break-all;
+  max-width: 300px;
+  width: auto;
+  display: inline-block !important;
+  display: inline;
+  height: auto;
+  padding: 10px;
+  border-radius: 10px;
+  position: relative;
+}
+
+.message_cell::before{
   content: "";
   position: absolute;
   top: 7px;
   border-top: 2px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-left: 10px solid #aaa;
-  right: -10px;
 }
 
 .remote_box {
@@ -157,68 +204,41 @@ body {
   margin-bottom: 15px;
 }
 
+.remote_cell {
+  margin-left: 20px;
+  margin-right: 80px;
+  color: #000;
+  background-color: rgb(228, 230, 235);
+}
+
+.remote_cell::before {
+  border-right: 10px solid rgb(228, 230, 235);;
+  left: -10px;
+}
+
 .local_box {
   display: flex;
   margin-bottom: 15px;
   justify-content: flex-end;
 }
 
-.head_sticker {
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  flex-shrink: 0;
+.local_cell {
+  order: -1;
+  margin-left: 80px;
+  margin-right: 20px;
+  background-color: rgb(212, 168, 140) ;
+  color:#fff;
 }
 
-.pic {
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-img {
-  width: 32px !important;
-  height: 32px;
-  vertical-align: bottom !important;
-}
-
-.gifIndex {
-  width: 45px;
-  animation-play-state: paused;
-}
-
-.gif {
-  width: 45px;
-  animation-play-state: paused;
-}
-
-#chat {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  margin: 5px;
-}
-
-#chatHead {
-  margin: 5px;
-  display: flex;
-  align-items: center;
-}
-
-#chat_headshot {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  background-color: #aaa;
-  margin-right: 10px;
+.local_cell::after {
+  border-left: 10px solid rgb(212, 168, 140);
+  right: -10px;
 }
 
 #tools {
-  width: 95%;
   display: flex;
-}
-
-#tools>div {
-  margin: 1px;
+  width: 95%;
+  padding: 3px;
 }
 
 #sticker {
@@ -228,11 +248,11 @@ img {
 #stickerList {
   display: flex;
   flex-direction: column;
-  bottom: 130px;
+  text-align: start;
   position: fixed;
+  bottom: 130px;
   padding: 5px;
   max-width: 320px;
-  text-align: start;
   background-color: rgba(100, 100, 100, 0.4);
 }
 
@@ -243,15 +263,6 @@ img {
 
 #stickerList_head>div {
   display: flex;
-}
-
-.left {
-  flex: none;
-}
-
-.right {
-  flex: 1;
-  justify-content: flex-end;
 }
 
 #stickerList_head>div>div {
@@ -267,59 +278,75 @@ img {
   cursor: pointer;
 }
 
-#shell {
-  flex: 1;
-  display: flex;
-}
-
-#friends {
-  width: 360px;
-  border-right: 1px solid #000;
-}
-
-#friends_head {
-  padding: 10px;
+/* input */
+#inputTable {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  font-size: 30px;
-  border-bottom: 1px solid #000;
+  width: 100%;
+  padding: 0 10px 10px 10px;
 }
 
-#friends_body {
-  height: 100%;
+#inputText {
+  flex:1;
+  outline: 0px;
+  border-radius: 23px;
+  max-height: 120px;
+  min-height: 23px;
+  padding: 5px 5px 10px 10px;
+  font-size: 16px;
+  font-weight: bold;
+  overflow: auto;
+  background-color: #ddd;
 }
 
-.friend_cell {
-  display: flex;
-  padding: 5px;
-  height: 72px;
-  align-items: center;
-}
-
-.friend_name {
-  text-align: center;
+#btn_send{
+  margin-right: 15px;
+  width: 25px;
+  height: 25px;
   font-size: 20px;
 }
 
-.friend_message {
-  font-weight: normal;
+#send {
+  margin: 5px;
 }
 
-.friend_head {
-  width: 56px;
-  height: 56px;
-  border-radius: 56px;
-  background-color: aquamarine;
-  margin-right: 10px;
+
+/* other */
+.pic {
+  border-radius: 50%;
+  overflow: hidden;
 }
 
-#friends_body>div.active,
-#friends_body>div:hover {
-  box-shadow: inset 0 0 10px #333;
-  cursor: pointer;
+img {
+  vertical-align: bottom !important;
+  width: 32px !important;
+  height: 32px;
 }
 
+.gifIndex {
+  width: 45px;
+}
+
+.gif {
+  width: 32px;
+  height: 32px;
+}
+
+.gifText {
+  width: 16px !important;
+  height: 16px !important;
+}
+
+.left {
+  flex: none;
+}
+
+.right {
+  flex: 1;
+  justify-content: flex-end;
+}
+
+/* other */
 #centerDiv {
   position: absolute;
   top: 300px;
@@ -327,11 +354,20 @@ img {
 
 .icon {
   border-radius: 50%;
-  padding: 3px;
+  padding: 5px;
 }
 
 .icon:active,
 .icon:hover {
   cursor: pointer;
-  background-color: #aaa;
+  background-color: rgb(228, 230, 235);
+}
+
+#shadow{
+  position:absolute;
+  height:100%;
+  width: 100%;
+
+  background-color: rgba(80, 80, 80, 0.6);
+  z-index:1;
 }
